--- a/frontend/about/index.html
+++ b/frontend/about/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home — E‑Commerce</title>
+    <title>About — E‑Commerce</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&family=Inter:wght@400;500;600&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -14,22 +14,20 @@
       <div class="container">
         <div class="brand">E‑Commerce</div>
         <nav class="nav" role="navigation" aria-label="primary">
-          <a href="/" class="nav-link is-active">Home</a>
-          <a href="/about" class="nav-link">About</a>
+          <a href="/" class="nav-link">Home</a>
+          <a href="/about" class="nav-link is-active">About</a>
           <a href="/contact" class="nav-link">Contact</a>
         </nav>
       </div>
     </header>
     <main class="site-content container">
-      <section class="page-home">
-        <div class="hero">
-          <h1 class="hero-title">Bienvenido a E‑Commerce AR</h1>
-          <p class="hero-subtitle">Productos, ofertas y una experiencia simple y accesible.</p>
-          <div class="hero-actions">
-            <a href="/contact" class="btn">Contáctanos</a>
-            <a href="/about" class="btn btn-secondary">Sobre nosotros</a>
-          </div>
-        </div>
+      <section class="page-about container">
+        <h1>Sobre E‑Commerce AR</h1>
+        <p>
+          Somos un equipo que apuesta por una experiencia rápida, accesible y confiable.
+          Este MVP v0.9 mantiene una identidad visual consistente utilizando Poppins, Inter y Roboto Mono.
+        </p>
+        <p class="muted">Transparencia y simplicidad en cada interacción.</p>
       </section>
     </main>
     <footer class="site-footer" role="contentinfo">
